--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="fullscreen-container">
         <img 
-            src="assets/image.png" 
+            src="assets/image.jpeg" 
             alt="Cambridge One" 
             class="fullscreen-image"
             onerror="handleImageError()"
