--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cambridge One</title>
     
     <!-- Standard Favicon -->
-    <link rel="icon" type="image/png" href="assets/icon.png">
+    <link rel="icon" type="image/png" href="assets/icon.ico">
     
     <!-- iOS Web App Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
